--- a/lab 01/lab 01/Debug/Makefile
+++ b/lab 01/lab 01/Debug/Makefile
@@ -38,7 +38,7 @@ SUBDIRS :=  \
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
-../7segmentos/7segmentos.c \
+../7segmentos/segmentos.c \
 ../main.c
 
 
@@ -49,19 +49,19 @@ ASM_SRCS +=
 
 
 OBJS +=  \
-7segmentos/7segmentos.o \
+7segmentos/segmentos.o \
 main.o
 
 OBJS_AS_ARGS +=  \
-7segmentos/7segmentos.o \
+7segmentos/segmentos.o \
 main.o
 
 C_DEPS +=  \
-7segmentos/7segmentos.d \
+7segmentos/segmentos.d \
 main.d
 
 C_DEPS_AS_ARGS +=  \
-7segmentos/7segmentos.d \
+7segmentos/segmentos.d \
 main.d
 
 OUTPUT_FILE_PATH +=lab\ 01.elf
@@ -78,7 +78,7 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
-7segmentos/7segmentos.o: ../7segmentos/7segmentos.c
+7segmentos/segmentos.o: ../7segmentos/segmentos.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
