--- a/Lab02_LCD/Lab02_LCD/Debug/Makefile
+++ b/Lab02_LCD/Lab02_LCD/Debug/Makefile
@@ -34,6 +34,7 @@ LINKER_SCRIPT_DEP:=
 # Every subdirectory with source files must be described here
 SUBDIRS :=  \
 ../Convertidor \
+../Uart \
 ../PantallasLCD
 
 
@@ -41,7 +42,8 @@ SUBDIRS :=  \
 C_SRCS +=  \
 ../Convertidor/ADC.c \
 ../PantallasLCD/LCD.c \
-../main.c
+../main.c \
+../Uart/Serial.c
 
 
 PREPROCESSING_SRCS += 
@@ -53,22 +55,26 @@ ASM_SRCS +=
 OBJS +=  \
 Convertidor/ADC.o \
 PantallasLCD/LCD.o \
-main.o
+main.o \
+Uart/Serial.o
 
 OBJS_AS_ARGS +=  \
 Convertidor/ADC.o \
 PantallasLCD/LCD.o \
-main.o
+main.o \
+Uart/Serial.o
 
 C_DEPS +=  \
 Convertidor/ADC.d \
 PantallasLCD/LCD.d \
-main.d
+main.d \
+Uart/Serial.d
 
 C_DEPS_AS_ARGS +=  \
 Convertidor/ADC.d \
 PantallasLCD/LCD.d \
-main.d
+main.d \
+Uart/Serial.d
 
 OUTPUT_FILE_PATH +=Lab02_LCD.elf
 
@@ -99,6 +105,13 @@ PantallasLCD/LCD.o: ../PantallasLCD/LCD.c
 	
 
 ./main.o: .././main.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+Uart/Serial.o: ../Uart/Serial.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
