--- a/Proyecto 01 esclavo motores/Proyecto 01 esclavo motores/Debug/Makefile
+++ b/Proyecto 01 esclavo motores/Proyecto 01 esclavo motores/Debug/Makefile
@@ -34,6 +34,7 @@ LINKER_SCRIPT_DEP:=
 # Every subdirectory with source files must be described here
 SUBDIRS :=  \
 ../I2C \
+../Stepper \
 ../PWM
 
 
@@ -41,7 +42,8 @@ SUBDIRS :=  \
 C_SRCS +=  \
 ../I2C/I2C.c \
 ../main.c \
-../PWM/PWM.c
+../PWM/PWM.c \
+../Stepper/stepper.c
 
 
 PREPROCESSING_SRCS += 
@@ -53,22 +55,26 @@ ASM_SRCS +=
 OBJS +=  \
 I2C/I2C.o \
 main.o \
-PWM/PWM.o
+PWM/PWM.o \
+Stepper/stepper.o
 
 OBJS_AS_ARGS +=  \
 I2C/I2C.o \
 main.o \
-PWM/PWM.o
+PWM/PWM.o \
+Stepper/stepper.o
 
 C_DEPS +=  \
 I2C/I2C.d \
 main.d \
-PWM/PWM.d
+PWM/PWM.d \
+Stepper/stepper.d
 
 C_DEPS_AS_ARGS +=  \
 I2C/I2C.d \
 main.d \
-PWM/PWM.d
+PWM/PWM.d \
+Stepper/stepper.d
 
 OUTPUT_FILE_PATH +=Proyecto\ 01\ esclavo\ motores.elf
 
@@ -99,6 +105,13 @@ I2C/I2C.o: ../I2C/I2C.c
 	
 
 PWM/PWM.o: ../PWM/PWM.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+Stepper/stepper.o: ../Stepper/stepper.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
